--- a/start-here/src/style.css
+++ b/start-here/src/style.css
@@ -1,61 +1,59 @@
-/*  General */
+/* general */
 
 * {
     box-sizing: border-box;
-}
-
-body {
+  }
+  
+  body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-
-/* frame and background */
-
-.container {
+  }
+  
+  .container {
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
+    top: 0;
     left: 0;
     right: 0;
-    top: 0;
     bottom: 0;
-}
-
-.frame {
+  }
+  
+  /* frame and background */
+  
+  .frame {
     height: 762px;
     width: 762px;
     position: relative;
-}
-
-.inner{
+  }
+  
+  .inner {
     position: relative;
-}
-
-.game {
+  }
+  
+  .game {
     width: 628px;
     height: 577px;
     position: absolute;
     top: 62px;
     left: 67px;
-}
-
-.game.night {
+  }
+  
+  .game.night {
     width: 716px;
     top: 62px;
     left: -19px;
-}
-
-.hidden{
+  }
+  
+  .hidden {
     display: none;
-}
-
-
-/*  buttons   */
-
-.buttons {
+  }
+  
+  /* buttons */
+  
+  .buttons {
     position: absolute;
     top: 674px;
     left: 266px;
@@ -63,10 +61,10 @@ body {
     width: 228px;
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-
-.icons {
+    justify-content: space-between;
+  }
+  
+  .icons {
     position: absolute;
     top: 572px;
     left: 194px;
@@ -75,78 +73,83 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-
-/* lol poop */
-
-.poop-bag {
+  }
+  
+  /* lol poop */
+  
+  .poop-bag {
     position: absolute;
     top: 300px;
-    left: 150px;
-}
-
-.model {
+    left: 160px;
+  }
+  
+  /* modal */
+  
+  .modal-inner {
+    background-color: blueviolet;
+    color: white;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 5px;
+  }
+  
+  .modal {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    background-color: blueviolet;
-    color: white;
-    padding: 25px;
-    font-size: 20px;
-    font-weight: bolder;
-    border-radius: 12px;
-}
-
-.model:empty {
+  }
+  
+  .modal:empty {
     display: none;
-}
-
-.nodel-inner:empty {
- display: none;   
-}
-
-.fox {
+  }
+  
+  .modal-inner:empty {
+    display: none;
+  }
+  
+  /* the fox */
+  
+  .fox {
     position: absolute;
     top: 336px;
     left: 285px;
     overflow: hidden;
-}
-
-.fox-pooping {
+  }
+  
+  .fox-pooping {
     top: 319px;
     left: 159px;
-}
-
-.fox-celebrate {
+  }
+  
+  .fox-celebrate {
     top: 290px;
     left: 290px;
-}
-
-.fox-rain {
+  }
+  
+  .fox-rain {
     top: 362px;
-}
-
-.fox-hungry {
+  }
+  
+  .fox-hungry {
     top: 362px;
-}
-
-.fox-eating {
+  }
+  
+  .fox-eating {
     top: 362px;
-}
-
-.fox-egg {
+  }
+  
+  .fox-egg {
     top: 289px;
-    left: 248px
-}
-
-.fox-sleep {
+    left: 248px;
+  }
+  
+  .fox-sleep {
     top: 351px;
     left: 445px;
-}
-
-.fox-dead {
+  }
+  
+  .fox-dead {
     top: 380px;
     left: 243px;
-}
+  }
